--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     </header>
 
     <nav>
-        <a href="C:\webskill\students\віталік присяжник\theme 9\12\еруьу14\еруьу 16\theme 17\еруьу18\залік\home.html">Home</a>
-        <a href="C:\webskill\students\віталік присяжник\theme 9\12\еруьу14\еруьу 16\theme 17\еруьу18\залік\about.html">About</a>
-        <a href="C:\webskill\students\віталік присяжник\theme 9\12\еруьу14\еруьу 16\theme 17\еруьу18\залік\services.html">services</a>
-        <a href="C:\webskill\students\віталік присяжник\theme 9\12\еруьу14\еруьу 16\theme 17\еруьу18\залік\2Contact.html">Contact</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">services</a>
+        <a href="Contact.html">Contact</a>
     </nav>
 
     <section>
@@ -65,7 +65,6 @@
 
 </body>
 </html>
-This HTML code creates a basic webpage structure with a header, navigation menu, a section for content, and a footer. The CSS styling provides some basic formatting and layout to the elements.
 
 
 
